compiler/testData/diagnostics/tests/generics/unclearTypeMismatch.diag.txt
/unclearTypeMismatch.kt:5:9: error: type mismatch: inferred type is Int but CharSequence was expected
    foo(list)
        ^^^^
